# python-playground

./: .env.example  .gitignore  .surgeignore  CLAUDE.md  README.md  build-wasm.sh  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  sw.js
.claude/skills/commit/: SKILL.md
.claude/skills/context-prime/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/validate-pipeline/: SKILL.md
.github/: copilot-instructions.md
docs/: getting_started.md
experiments/: fibonacci_experiment.py
pkg/: package.json  tacobell_finder.d.ts  tacobell_finder.js  tacobell_finder_bg.wasm  tacobell_finder_bg.wasm.d.ts
reverser/: __init__.py  __main__.py  classifier.py  cli.py  db.py  graph.py  llm.py  mcp_server.py  models.py  renderer.py  repl.py  scanner.py  schema_gen.py  service.py  service_installer.py
reverser/adapters/: __init__.py  com_adapter.py  subprocess_adapter.py  wrapper_adapter.py  wrapper_gen.py
reverser/agents/: __init__.py  orchestrator.py  tools.py
reverser/discovery/: __init__.py  binary_discovery.py  com_discovery.py  process_discovery.py  python_discovery.py  system_discovery.py
reverser/parser/: __init__.py  ai_parser.py  python_parser.py
rust-tacobell/: .gitignore  Cargo.toml  build.rs  refresh-data.sh  scrape-canada.py
rust-tacobell/data/: canadian-stores.json
rust-tacobell/src/: lib.rs
src/: __init__.py  sample_module.py
tests/: __init__.py  test_sample_module.py  test_utilities.py
tests/test_reverser/: __init__.py  test_adapters.py  test_classifier.py  test_cli.py  test_db.py  test_discovery.py  test_e2e.py  test_graph.py  test_orchestrator.py  test_python_parser.py  test_scanner.py  test_wrapper_gen.py
utilities/: __init__.py  helpers.py
